--- a/src/app/Products/productmediator/productmediator.component.html
+++ b/src/app/Products/productmediator/productmediator.component.html
@@ -1,4 +1,7 @@
  <div>
+        <div style="padding: 25px">
+        Product Store
+    </div>
     <div>
         <app-pannel (SearchClick)="GetFilterData($event)" (SortClick)="GetSortData($event)"></app-pannel>
     </div>
